cofounder description added

--- a/src/sections/about/History.astro
+++ b/src/sections/about/History.astro
@@ -63,7 +63,8 @@ import garland from "../../assets/about/flowers.svg";
       <header
         class:list={[
           "grid grid-cols-1",
-          "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-pretty [&_p]:text-green-leaf-900",
+          // "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-pretty [&_p]:text-green-leaf-900",
+          "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-pretty",
           "space-y-5",
         ]}
       >
@@ -72,23 +73,23 @@ import garland from "../../assets/about/flowers.svg";
           alt="Flowers garland"
           class:list={["object-contain", "place-self-center", "h-16 md:h-24"]}
         />
-        <p>
-          We are delighted to extend the warmest of welcomes to our gastronomic
-          corner, where homemade flavors and handcrafted dishes are the hallmark
-          of our Reyna family.
+        <p class="text-green-leaf-700">
+          Soy Yesenia Reyna y soy la segunda generación de "La Chinacata". La
+          cocina siempre ha sido mi pasión y me encanta compartirla con nuestros
+          clientes.
         </p>
-        <p>
-          At La Chinacata, each dish is infused with the love and passion that
-          only a family-owned business can offer. From our traditional recipes
-          to our innovative creations, every bite is an experience that
-          celebrates the authenticity and care with which we craft each detail.
+        <p class="text-green-leaf-700">
+          Hoy, me encargo de llevar adelante la tradición de mi madre,
+          ofreciendo platillos caseros con el mismo amor y dedicación. Desde la
+          atención a nuestros clientes hasta la creación de mesas y buffets
+          espectaculares, estoy involucrada en cada detalle de nuestros eventos.
         </p>
-        <p>
+        <!-- <p>
           We take pride in sharing not only our food but also our history and
           values with you. We are more than just a catering business; we are a
           family dedicated to providing you with unforgettable moments through
           the magic of homemade cooking.
-        </p>
+        </p> -->
       </header>
     </article>
   </div>
