--- a/src/sections/about/History.astro
+++ b/src/sections/about/History.astro
@@ -6,7 +6,14 @@ import garland from "../../assets/about/flowers.svg";
 ---
 
 <section class="section-full space-y-10">
-  <div class:list={["section", "grid grid-cols-1 md:grid-cols-2", "gap-x-9"]}>
+  <div
+    class:list={[
+      "section",
+      "grid grid-cols-1 md:grid-cols-2",
+      "gap-y-10",
+      "gap-x-9",
+    ]}
+  >
     <article class:list={["grid grid-cols-1", "gap-2"]}>
       <Image
         src={founder}
@@ -21,7 +28,7 @@ import garland from "../../assets/about/flowers.svg";
       <header
         class:list={[
           "grid grid-cols-1",
-          "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-pretty [&_p]:text-green-leaf-900",
+          "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-center [&_p]:text-pretty [&_p]:text-green-leaf-900",
           "space-y-5",
         ]}
       >
@@ -63,8 +70,7 @@ import garland from "../../assets/about/flowers.svg";
       <header
         class:list={[
           "grid grid-cols-1",
-          // "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-pretty [&_p]:text-green-leaf-900",
-          "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-pretty",
+          "[&_p]:font-extralight [&_p]:text-lg [&_p]:text-center [&_p]:text-pretty [&_p]:text-green-leaf-900",
           "space-y-5",
         ]}
       >
@@ -73,16 +79,11 @@ import garland from "../../assets/about/flowers.svg";
           alt="Flowers garland"
           class:list={["object-contain", "place-self-center", "h-16 md:h-24"]}
         />
-        <p class="text-green-leaf-700">
-          Soy Yesenia Reyna y soy la segunda generación de "La Chinacata". La
-          cocina siempre ha sido mi pasión y me encanta compartirla con nuestros
-          clientes.
-        </p>
-        <p class="text-green-leaf-700">
-          Hoy, me encargo de llevar adelante la tradición de mi madre,
-          ofreciendo platillos caseros con el mismo amor y dedicación. Desde la
-          atención a nuestros clientes hasta la creación de mesas y buffets
-          espectaculares, estoy involucrada en cada detalle de nuestros eventos.
+        <p>Soy Yesenia Reyna y soy la segunda generación de La Chinacata.</p>
+        <p>
+          Mi pasión es el servicio al cliente, brindar atención personalizada y
+          ayudarlos crear el evento de sus sueños creando montajes hermosos que
+          complementan la deliciosa comida de mi mamá.
         </p>
         <!-- <p>
           We take pride in sharing not only our food but also our history and
