about hero image updated

--- a/src/sections/about/Hero.astro
+++ b/src/sections/about/Hero.astro
@@ -1,7 +1,8 @@
 <section
   class:list={[
     "section-full",
-    "bg-about-hero bg-no-repeat bg-left lg:bg-center bg-cover",
+    // "bg-about-hero bg-no-repeat bg-left lg:bg-center bg-cover",
+    "bg-about-hero bg-no-repeat bg-center bg-cover",
     "h-[calc(65vh)]",
   ]}
 >
