--- a/src/sections/about/Intro.astro
+++ b/src/sections/about/Intro.astro
@@ -10,17 +10,20 @@ import family from "../../assets/about/family.png";
       class:list={[
         "flex flex-col items-center",
         "space-y-6",
-        "text-center",
-        "[&_p]:text-green-leaf-800",
+        "[&_p]:text-center [&_p]:text-pretty",
+        "[&_p]:font-extralight [&_p]:text-green-leaf-900",
       ]}
     >
-      <span class="font-light text-green-leaf-800">Welcome to La chinacata</span
+      <!-- <span class="font-light text-center text-green-leaf-800" -->
+      <span
+        class="font-extralight text-sm text-center text-green-leaf-800 uppercase"
+        >Welcome to La chinacata</span
       >
       <h2
         class:list={[
           "font-serif",
           "text-heading-sm md:text-heading-lg",
-          "text-pretty text-french-rose-400",
+          "text-center text-pretty text-french-rose-400",
         ]}
       >
         Memorable <br />& custom <br />design catering
@@ -30,24 +33,24 @@ import family from "../../assets/about/family.png";
         alt="Flowers garland"
         class:list={["object-contain", "place-self-center", "h-16 md:h-24"]}
       />
-      <p class:list={["font-light", "text-lg", "mx-auto", "mt-4"]}>
+      <p class:list={["text-lg", "mx-auto", "mt-4"]}>
         We are delighted to extend the warmest of welcomes to our gastronomic
         corner, where homemade flavors and handcrafted dishes are the hallmark
         of our Reyna family.
       </p>
-      <p class:list={["font-light", "text-lg", "mx-auto", "mt-4"]}>
+      <p class:list={["text-lg", "mx-auto", "mt-4"]}>
         At La Chinacata, each dish is infused with the love and passion that
         only a family-owned business can offer. From our traditional recipes to
         our innovative creations, every bite is an experience that celebrates
         the authenticity and care with which we craft each detail.
       </p>
-      <p class:list={["font-light", "text-lg", "mx-auto", "mt-4"]}>
+      <p class:list={["text-lg", "mx-auto", "mt-4"]}>
         We take pride in sharing not only our food but also our history and
         values with you. We are more than just a catering business; we are a
         family dedicated to providing you with unforgettable moments through the
         magic of homemade cooking.
       </p>
-      <p class:list={["font-light", "text-lg", "mx-auto", "mt-4"]}>
+      <p class:list={["text-lg", "mx-auto", "mt-4"]}>
         We hope you enjoy this culinary journey with us, and may each flavor
         transport you to moments of joy and connection. Welcome to La Chinacata,
         where every dish tells a story, and every customer becomes a part of our
