--- a/src/sections/home/Celebrations.astro
+++ b/src/sections/home/Celebrations.astro
@@ -32,23 +32,9 @@ const menus = [
     detail: "",
   },
   {
-    name: "Social events",
-    detail:
-      "Liven up your party with casual food and appetizers that will keep your guests coming back for more.",
-  },
-  {
     name: "Italian Menu",
     detail:
-      "Transport your guests to a Hawaiian oasis with  teriyaki chicken, and traditional hawaiian mac salad.",
-  },
-  {
-    name: "",
-    detail: "",
-  },
-  {
-    name: "Corporate catering",
-    detail:
-      "Impress your colleagues with office catering that offers healthy and delicious options.",
+      "Transport your guests to the heart of Italy with our delicious, homemade Italian cuisine.",
   },
   {
     name: "Add-ons",
@@ -65,7 +51,7 @@ const menus = [
       "max-w-2xl",
       "pb-10",
       "text-center",
-      "[&_p]:font-sans [&_p]:font-light [&_p]:text-lg [&_p]:text-green-leaf-800",
+      "[&_p]:font-sans [&_p]:font-light [&_p]:text-lg [&_p]:text-green-leaf-900",
     ]}
   >
     <h2
@@ -84,8 +70,8 @@ const menus = [
   </header>
   <div
     class:list={[
-      "grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 lg:grid-rows-5",
-      "gap-8 lg:gap-2 xl:gap-6",
+      "grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 lg:grid-rows-4",
+      "gap-8 lg:gap-2 xl:gap-2",
     ]}
   >
     {
@@ -102,7 +88,7 @@ const menus = [
           <h3
             class:list={[
               "cursor-pointer",
-              "font-serif font-semibold text-3xl xl:text-4xl text-center text-pretty text-green-leaf-800",
+              "font-serif font-semibold text-3xl xl:text-4xl text-center text-pretty text-green-leaf-900",
               "hover:text-carnation-400 hover:transition-colors hover:duration-75 hover:ease-linear",
             ]}
           >
@@ -112,7 +98,7 @@ const menus = [
             class:list={[
               "max-w-80",
               "pt-3",
-              "font-sans font-light text-base xl:text-lg text-center text-pretty text-green-leaf-800",
+              "font-sans font-light text-base xl:text-lg text-center text-pretty text-green-leaf-900",
             ]}
           >
             {menu.detail}
@@ -124,9 +110,9 @@ const menus = [
       src={seafood}
       alt="Seafood appetizer"
       class:list={[
-        "lg:row-start-2 lg:col-start-2 lg:row-end-5",
+        "lg:row-start-2 lg:col-start-2 lg:row-end-4",
         "hidden lg:block",
-        "border-green-leaf-800 border-t-4 border-b border-l-2 border-r-2",
+        "border-green-leaf-900 border-t-4 border-b border-l-2 border-r-2",
         "lg:min-h-[80%] xl:min-h-[90%]",
         "object-cover rounded-full",
         "place-self-center",
@@ -138,7 +124,7 @@ const menus = [
       "flex flex-col gap-7",
       "pt-10 lg:pt-5",
       "text-center",
-      "[&_p]:font-sans [&_p]:font-light [&_p]:text-lg [&_p]:text-green-leaf-800",
+      "[&_p]:font-sans [&_p]:font-light [&_p]:text-lg [&_p]:text-green-leaf-900",
     ]}
   >
     <p>
