footer UI updated

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ import logo from "../assets/logo/logo-footer.svg";
       "border-t border-t-green-leaf-800",
       "flex flex-col md:flex-row",
       "items-center justify-center md:justify-between",
-      "font-light text-sm text-green-leaf-800",
+      "font-extralight text-[15px] text-green-leaf-800",
       "mx-auto",
       "max-w-screen-xl",
       "w-4/5",
