UI's event section updated

--- a/src/components/Event.astro
+++ b/src/components/Event.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 
@@ -53,4 +53,4 @@ const { class: className, name, detail, moreDetails, image, alt } = Astro.props;
   >
     {moreDetails}
   </p>
-</article>
+</article> -->
