--- a/src/sections/about/Hero.astro
+++ b/src/sections/about/Hero.astro
@@ -1,7 +1,6 @@
 <section
   class:list={[
     "section-full",
-    // "bg-about-hero bg-no-repeat bg-left lg:bg-center bg-cover",
     "bg-about-hero bg-no-repeat bg-center bg-cover",
     "h-[calc(65vh)]",
   ]}
@@ -17,11 +16,11 @@
     <h1
       class:list={[
         "absolute top-1/2 2xl:top-1/3",
-        "font-serif drop-shadow-lg",
         "mb-4",
         "max-w-96 lg:max-w-xl",
         "px-1 sm:px-4",
-        "text-hero-sm md:text-hero-md lg:text-hero-lg text-center text-pretty text-vista-white",
+        "font-serif text-hero-sm md:text-hero-md lg:text-hero-lg text-center text-pretty text-vista-white",
+        "[text-shadow:1px_1px_4px_#37474F]",
       ]}
     >
       About La chinacata
