--- a/src/sections/home/Hero.astro
+++ b/src/sections/home/Hero.astro
@@ -16,10 +16,10 @@
     <h1
       class:list={[
         "absolute top-1/3 lg:top-1/4",
-        "font-serif drop-shadow-lg",
         "max-w-96 lg:max-w-lg",
         "px-1 sm:px-4",
-        "text-hero-sm md:text-hero-md lg:text-hero-lg text-center text-pretty text-vista-white",
+        "font-serif text-hero-sm md:text-hero-lg lg:text-hero-lg text-center text-pretty text-vista-white",
+        "[text-shadow:1px_1px_4px_#37474F]",
       ]}
     >
       Authentic homemade flavor
