UI's about page improved

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,11 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../sections/about/Hero.astro";
 import Intro from "../sections/about/Intro.astro";
+import FoodTruck from "../sections/about/FoodTruck.astro";
 import History from "../sections/about/History.astro";
 ---
 
 <Layout title="About us">
   <Hero />
   <Intro />
+  <FoodTruck />
   <History />
 </Layout>
