--- a/src/sections/about/Intro.astro
+++ b/src/sections/about/Intro.astro
@@ -62,7 +62,7 @@ import family from "../../assets/about/family.png";
         src={family}
         alt="La Chinacata family"
         class:list={[
-          "object-cover object-center on",
+          "object-cover object-center",
           "border-r-2 border-t-4 border-green-leaf-800",
           "rounded-tl-full rounded-bl-md rounded-tr-full rounded-br-md",
           "w-full",
