--- a/src/sections/home/Events.astro
+++ b/src/sections/home/Events.astro
@@ -103,7 +103,7 @@ const events = [
             <span
               class:list={[
                 "mt-8",
-                "font-serif font-bold text-[28px] text-french-rose-400",
+                "font-serif text-[28px] text-french-rose-400",
               ]}
             >
               {event.name}
