--- a/src/sections/home/Clients.astro
+++ b/src/sections/home/Clients.astro
@@ -1,20 +1,21 @@
 ---
-import { Image, imageConfig } from "astro:assets";
-import luis from "../../assets/home/clients/luis-n.jpeg";
+import { Image } from "astro:assets";
+import luis from "../../assets/home/clients/luis-n.png";
+import karen from "../../assets/home/clients/karen-miranda.png";
 
 const reviews = [
   {
     name: "Luis N.",
     review:
-      "This family owned business has come a long way and they  have never sacrificed quality even when times got tough. Food and service had always been the forefront, and they take a lot of pride in the food they make. If you haven't had their aguas frescas, they were always the best on a warm day.",
+      "This family owned business has come a long way and they have never sacrificed quality even when times got tough. Food and service had always been the forefront, and they take a lot of pride in the food they make. If you haven't had their aguas frescas, they were always the best on a warm day.",
     image: luis,
   },
-  // {
-  //   name: "Sara & John",
-  //   review:
-  //     "We hired La Chinacata for our corporate event and we were very pleased with the service. The food was delicious and the staff was very professional.",
-  //   image: cheers,
-  // },
+  {
+    name: "Karen Miranda",
+    review:
+      "Everything was delicious and so special! Thank you for sharing and doing such an amazing job at our baby shower 🥰🙏🏼😊",
+    image: karen,
+  },
 ];
 ---
 
@@ -25,7 +26,7 @@ const reviews = [
       "mx-auto",
       "max-w-2xl",
       "[&_p]:text-lg",
-      "font-light text-center text-green-leaf-800",
+      "font-extralight text-center text-green-leaf-900",
     ]}
   >
     <h2
@@ -42,34 +43,66 @@ const reviews = [
   </header>
   <div class:list={["mx-auto", "max-w-screen-sm", "pt-10"]}>
     {
-      reviews.map((review) => (
-        <div class:list={["flex flex-col sm:flex-row gap-6"]}>
-          <Image
-            src={review.image}
-            alt={review.name}
-            class:list={[
-              "basis-1/2",
-              "rounded-3xl",
-              "mx-auto",
-              "object-contain h-80",
-            ]}
-          />
+      reviews.map((review, index) => (
+        <>
           <div
+            id={review.name.toLocaleLowerCase()}
             class:list={[
-              "flex flex-col basis-1/2",
-              "[&_p]:text-center [&_p]:text-lg",
-              "font-medium text-pretty text-green-leaf-800",
+              "flex flex-col sm:flex-row gap-6",
+              { hidden: index !== 0 },
             ]}
           >
-            <p>
-              <span class="align-sub font-serif font-bold text-4xl">"</span>
-              {review.review}
-              <span class="align-sub font-serif font-bold text-4xl">"</span>
-            </p>
-            <p class="italic pt-6">{review.name}</p>
+            <Image
+              src={review.image}
+              alt={review.name}
+              class:list={[
+                "basis-1/3",
+                "rounded-3xl",
+                "mx-auto",
+                "object-contain h-60 lg:h-72",
+              ]}
+            />
+            <div
+              class:list={[
+                "flex flex-col basis-2/3",
+                "place-self-center",
+                "[&_p]:text-center",
+                "text-pretty text-green-leaf-900",
+              ]}
+            >
+              <p>
+                <span class="align-top font-serif font-black text-lg">"</span>
+                {review.review}
+                <span class="align-top font-serif font-black text-lg">"</span>
+              </p>
+              <p class="italic pt-4 text-french-rose-400">{review.name}</p>
+            </div>
           </div>
-        </div>
+        </>
       ))
     }
+    <div
+      id="next"
+      class:list={[
+        "cursor-pointer",
+        "flex justify-end",
+        "font-light text-sm text-green-leaf-900 uppercase",
+      ]}
+    >
+      next
+    </div>
   </div>
 </section>
+<script>
+  const next = document.getElementById("next");
+  const review1 = document.getElementById("luis n.");
+  const review2 = document.getElementById("karen miranda");
+
+  console.log("NEXT: ", next);
+  console.log("review 1: ", review1);
+  console.log("review 2: ", review2);
+  next?.addEventListener("click", () => {
+    review1?.classList.toggle("hidden");
+    review2?.classList.toggle("hidden");
+  });
+</script>
