UI responsive behavior updated

--- a/src/sections/about/FoodTruck.astro
+++ b/src/sections/about/FoodTruck.astro
@@ -50,8 +50,7 @@ import founders from "../../assets/gallery/chinacata-founders.png";
         "[&_p]:font-extralight [&_p]:text-green-leaf-900",
       ]}
     >
-      <span
-        class="font-extralight text-sm text-center text-green-leaf-900 uppercase"
+      <span class="font-light text-sm text-center text-green-leaf-900 uppercase"
         >Our start</span
       >
       <h2
