--- a/src/sections/about/Intro.astro
+++ b/src/sections/about/Intro.astro
@@ -14,9 +14,7 @@ import family from "../../assets/about/family.png";
         "[&_p]:font-extralight [&_p]:text-green-leaf-900",
       ]}
     >
-      <!-- <span class="font-light text-center text-green-leaf-800" -->
-      <span
-        class="font-extralight text-sm text-center text-green-leaf-800 uppercase"
+      <span class="font-light text-sm text-center text-green-leaf-900 uppercase"
         >Welcome to La chinacata</span
       >
       <h2
