text weight and color updated

--- a/src/sections/gallery/Flavors.astro
+++ b/src/sections/gallery/Flavors.astro
@@ -51,7 +51,7 @@ const images = [
         "flex flex-col gap-7",
         "text-center",
         "[&_p]:text-center [&_p]:text-lg",
-        "font-light text-green-leaf-800",
+        "font-extralight text-green-leaf-900",
       ]}
     >
       <h2
