UI variable updated

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -104,7 +104,7 @@ const links = [
   class:list={[
     "hidden lg:hidden",
     "fixed top-0",
-    "bg-lavender-blush bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-25",
+    "bg-french-rose-50 bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-25",
     "h-dvh",
     "py-3",
     "w-full",
